# taketaketake

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  taketaketake-theme.template.json  taketaketake.template.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  project-automation.yml  release.yml
taketaketake/: __init__.py  __main__.py  app.py  constants.py  engine.py  pgn.py  pieces.py  theme.py  training.py  tree.py
tests/: test_taketaketake.py
