# ==============================================================================
# pyproject.toml — TakeTakeTake
# ==============================================================================
# Pure-Python desktop chess application (stdlib only, no external dependencies)
# Developed with Python 3.14.  Minimum supported version: 3.14.
# ==============================================================================

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ------------------------------------------------------------------------------
# Project metadata  (PEP 621)
# ------------------------------------------------------------------------------

[project]
name        = "taketaketake"
version     = "1.0.0"
description = "Pure-Python desktop chess application — stdlib only, no external dependencies"
readme      = "README.md"
license     = { text = "MIT" }

requires-python = ">=3.14"

keywords = [
    "chess",
    "pgn",
    "tkinter",
    "desktop",
    "board-game",
    "game",
    "stdlib",
]

classifiers = [
    # Project maturity
    "Development Status :: 5 - Production/Stable",

    # Target environments
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",

    # Audience
    "Intended Audience :: End Users/Desktop",

    # License
    "License :: OSI Approved :: MIT License",

    # Natural language of the UI / docs
    "Natural Language :: English",

    # Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",

    # Topics
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # Type annotations present
    "Typing :: Typed",
]

# No external runtime dependencies — the entire package runs on stdlib only.
dependencies = []

# ------------------------------------------------------------------------------
# Optional / development dependencies
# ------------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyflakes>=3.2",
]

# ------------------------------------------------------------------------------
# Entry points
# ------------------------------------------------------------------------------

[project.scripts]
taketaketake = "taketaketake.__main__:main"

# ------------------------------------------------------------------------------
# Project URLs
# ------------------------------------------------------------------------------

[project.urls]
Homepage      = "https://github.com/bigmauri/taketaketake"
Repository    = "https://github.com/bigmauri/taketaketake"
Issues        = "https://github.com/bigmauri/taketaketake/issues"
Changelog     = "https://github.com/bigmauri/taketaketake/blob/main/CHANGELOG.md"
Documentation = "https://github.com/bigmauri/taketaketake#readme"

# ------------------------------------------------------------------------------
# Setuptools — package discovery
# ------------------------------------------------------------------------------

[tool.setuptools.packages.find]
where   = ["."]
include = ["taketaketake*"]

[tool.setuptools.package-data]
taketaketake = ["py.typed"]

# ------------------------------------------------------------------------------
# pytest
# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts        = "-v --tb=short"

# ------------------------------------------------------------------------------
# Coverage
# ------------------------------------------------------------------------------

[tool.coverage.run]
source  = ["taketaketake"]
omit    = [
    "taketaketake/app.py",   # tkinter GUI — not testable in a headless environment
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under   = 80

# ------------------------------------------------------------------------------
# Pyflakes
# ------------------------------------------------------------------------------

[tool.pyflakes]
max_line_length = 100
